--- a/src/components/widgets/FAQs.astro
+++ b/src/components/widgets/FAQs.astro
@@ -10,7 +10,6 @@ const {
   tagline = '',
   items = [],
   columns = 2,
-
   id,
   isDark = false,
   classes = {},
@@ -23,7 +22,7 @@ const {
   <ItemGrid
     items={items}
     columns={columns}
-    defaultIcon="tabler:chevron-right"
+    defaultIcon="tabler:point-filled"
     classes={{
       container: `${columns === 1 ? 'max-w-4xl' : ''} gap-y-8 md:gap-y-12`,
       panel: 'max-w-none',
