--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -30,12 +30,12 @@ import '@fontsource-variable/inter';
       'Helvetica Neue', 'Inter Variable', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
       sans-serif;
 
-    --aw-color-primary: #00c599;
-    --aw-color-secondary: rgb(0 170 133);
+    --aw-color-primary: 0 197 153;
+    --aw-color-secondary: 0 170 133;
     --aw-color-accent: rgb(109 40 217);
 
-    --aw-color-text-heading: #2e2e2e;
-    --aw-color-text-default: #2e2e2e;
+    --aw-color-text-heading: #141414;
+    --aw-color-text-default: #141414;
     --aw-color-text-muted: rgb(16 16 16 / 66%);
     --aw-color-bg-page: #faf9f6;
     --aw-color-border: #e3e0db;
@@ -53,8 +53,8 @@ import '@fontsource-variable/inter';
     --aw-font-serif: 'Inter Variable';
     --aw-font-heading: 'Inter Variable';
 
-    --aw-color-primary: rgb(0 197 153);
-    --aw-color-secondary: rgb(0 170 133);
+    --aw-color-primary: 0 197 153;
+    --aw-color-secondary: 0 170 133;
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(247, 248, 248);
