--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,9 @@
 import Layout from '~/layouts/PageLayout.astro';
 import Hero from '~/components/widgets/Hero.astro';
 import Features2 from '~/components/widgets/Features2.astro';
-import Features from '~/components/widgets/Features.astro';
 import Testimonials from '~/components/widgets/Testimonials.astro';
 import Button from '~/components/ui/Button.astro';
-import heroImage from '~/assets/images/hero.png';
-import Stats from '~/components/widgets/Stats.astro';
+import heroImage from '~/assets/images/indexHero.png';
 import TimelineImage from '~/assets/images/timeline.png';
 import Content from '~/components/widgets/Content.astro';
 const appStoreDownloadLink = 'https://github.com/arthelokyo/astrowind';
