final commit for initial landing

--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -22,7 +22,7 @@ const metadata = {
 <Layout metadata={metadata}>
   <!-- HeroText Widget ******************* -->
 
-  <HeroText title="Which Sproutful is right for me?" subtitle="Choose the perfect plan that fits your needs" />
+  <HeroText title="Which Sproutful is right for you?" subtitle="Choose the perfect plan that fits your needs" />
 
   <!-- Pricing Widget ******************* -->
 
